@@ -36,6 +36,7 @@
 #if BX_WITH_MACOS
 #include <QuickTimeMusic.h>
 #else
+#include <CoreServices/CoreServices.h>
 #include <CoreAudio/CoreAudio.h>
 #include <AudioUnit/AudioUnit.h>
 #include <AudioToolbox/DefaultAudioOutput.h>
@@ -45,11 +46,18 @@
 #endif
 #include <string.h>
 
+#if (MAC_OS_X_VERSION_MAX_ALLOWED >= 1030)
+#define BX_SOUND_OSX_CONVERTER_NEW_API 1
+#endif
+
 #ifdef BX_SOUND_OSX_use_converter
-OSStatus MyRenderer (void *inRefCon, AudioUnitRenderActionFlags inActionFlags,
-    const AudioTimeStamp *inTimeStamp, UInt32 inBusNumber, AudioBuffer *ioData);
-OSStatus MyACInputProc (AudioConverterRef inAudioConverter, UInt32* outDataSize,
-    void** outData, void* inUserData);
+#ifndef BX_SOUND_OSX_CONVERTER_NEW_API
+OSStatus MyRenderer (void *inRefCon, AudioUnitRenderActionFlags inActionFlags, const AudioTimeStamp *inTimeStamp, UInt32 inBusNumber, AudioBuffer *ioData);
+OSStatus MyACInputProc (AudioConverterRef inAudioConverter, UInt32* outDataSize, void** outData, void* inUserData);
+#else
+OSStatus MyRenderer (void *inRefCon, AudioUnitRenderActionFlags *ioActionFlags, const AudioTimeStamp *inTimeStamp, UInt32 inBusNumber, UInt32 inNumberFrames, AudioBufferList *ioData);
+OSStatus MyACInputProc (AudioConverterRef inAudioConverter, UInt32 *ioNumberDataPackets, AudioBufferList *ioData, AudioStreamPacketDescription **outDataPacketDescription, void *inUserData);
+#endif
 #endif
 
 // Global variables
@@ -102,17 +110,17 @@ int bx_sound_osx_c::openmidioutput(const char *mididev)
     NewAUGraph (&MidiGraph);
 
     // Open the DLS Synth
-    description.componentType           = kAudioUnitComponentType;
-    description.componentSubType        = kAudioUnitSubType_MusicDevice;
-    description.componentManufacturer   = kAudioUnitID_DLSSynth;
+    description.componentType           = kAudioUnitType_MusicDevice;
+    description.componentSubType        = kAudioUnitSubType_DLSSynth;
+    description.componentManufacturer   = kAudioUnitManufacturer_Apple;
     description.componentFlags          = 0;
     description.componentFlagsMask      = 0;
     AUGraphNewNode (MidiGraph, &description, 0, NULL, &synthNode);
 
     // Open the output device
-    description.componentType           = kAudioUnitComponentType;
-    description.componentSubType        = kAudioUnitSubType_Output;
-    description.componentManufacturer   = kAudioUnitID_DefaultOutput;
+    description.componentType           = kAudioUnitType_Output;
+    description.componentSubType        = kAudioUnitSubType_DefaultOutput;
+    description.componentManufacturer   = kAudioUnitManufacturer_Apple;
     description.componentFlags          = 0;
     description.componentFlagsMask      = 0;
     AUGraphNewNode (MidiGraph, &description, 0, NULL, &outputNode);
@@ -192,28 +200,102 @@ int bx_sound_osx_c::openwaveoutput(const char *wavedev)
     if (err != noErr) return BX_SOUNDLOW_ERR;
 #endif
 #ifdef BX_SOUND_OSX_use_converter
+#ifndef BX_SOUND_OSX_CONVERTER_NEW_API
     err = OpenDefaultAudioOutput (&WaveOutputUnit);
     if (err != noErr) return BX_SOUNDLOW_ERR;
-    AudioUnitInitialize (WaveOutputUnit);
 
-    // Set up a callback function to generate output to the output unit
     AudioUnitInputCallback input;
     input.inputProc = MyRenderer;
     input.inputProcRefCon = (void *) this;
     AudioUnitSetProperty (WaveOutputUnit, kAudioUnitProperty_SetInputCallback,
         kAudioUnitScope_Global, 0, &input, sizeof(input));
+#else
+    ComponentDescription desc;
+    desc.componentType = kAudioUnitType_Output;
+    desc.componentSubType = kAudioUnitSubType_DefaultOutput;
+    desc.componentManufacturer = kAudioUnitManufacturer_Apple;
+    desc.componentFlags = 0;
+    desc.componentFlagsMask = 0;
+
+    Component c = FindNextComponent(NULL, &desc);
+    if (c == NULL) {
+      BX_ERROR(("Core Audio: Unable to find default audio output component\n"));
+      return BX_SOUNDLOW_ERR;
+    }
+    err = OpenAComponent(c, &WaveOutputUnit);
+    if (err) {
+      BX_ERROR(("Core Audio: Unable to open audio output (err=%X)\n", (unsigned int)err));
+      return BX_SOUNDLOW_ERR;
+    } 
+
+    AURenderCallbackStruct input;
+    input.inputProc = MyRenderer;
+    input.inputProcRefCon = (void *) this;
+    err = AudioUnitSetProperty (WaveOutputUnit,
+        kAudioUnitProperty_SetRenderCallback,
+        kAudioUnitScope_Input, 0, &input, sizeof(input));
+    if (err) {
+      BX_ERROR(("Core Audio: AudioUnitSetProperty error (err=%X)\n", (unsigned int)err));
+      return BX_SOUNDLOW_ERR;
+    }
+#endif
+    err = AudioUnitInitialize (WaveOutputUnit);
+    if (err) {
+      BX_ERROR(("Core Audio: AudioUnitInitialize error (err=%X)\n", (unsigned int)err));
+      return BX_SOUNDLOW_ERR;
+    } 
 #endif
 
     WaveOpen = 1;
     return BX_SOUNDLOW_OK;
 }
 
+#ifdef BX_SOUND_OSX_use_converter
+OSStatus bx_sound_osx_c::core_audio_pause() {
+  OSStatus err = noErr;
+
+  if (WaveOutputUnit) {
+    err = AudioOutputUnitStop (WaveOutputUnit);
+    if (err) {
+      BX_ERROR(("Core Audio: nextbuffer(): AudioOutputUnitStop (err=%X)\n", (unsigned int)err)); 
+    }
+    WavePlaying = 0;
+  }
+
+  return err;
+}
+
+OSStatus bx_sound_osx_c::core_audio_resume() {
+  OSStatus err = noErr;
+
+  if (WaveConverter) {
+    err = AudioConverterReset (WaveConverter);
+    if (err) {
+      BX_ERROR(("Core Audio: core_audio_resume(): AudioConverterReset (err=%X)\n", (unsigned int)err)); 
+      return err;
+    }
+  }
+  if (WaveOutputUnit) {
+    err = AudioOutputUnitStart (WaveOutputUnit);
+    if (err) {
+      BX_ERROR(("Core Audio: core_audio_resume(): AudioOutputUnitStart (err=%X)\n", (unsigned int)err)); 
+      return err;
+    }
+    WavePlaying = 1;
+  }
+
+  return err;
+}
+#endif
+
 int bx_sound_osx_c::startwaveplayback(int frequency, int bits, bx_bool stereo, int format)
 {
 #ifdef BX_SOUND_OSX_use_converter
-    static int oldfreq, oldbits, oldstereo, oldformat;
+    static int oldfreq, oldbits, oldformat;
+    static bx_bool oldstereo;
     AudioStreamBasicDescription srcFormat, dstFormat;
     UInt32 formatSize = sizeof(AudioStreamBasicDescription);
+    OSStatus err;
 #endif
 
     BX_DEBUG(("startwaveplayback(%d, %d, %d, %x)", frequency, bits, stereo, format));
@@ -240,7 +322,7 @@ int bx_sound_osx_c::startwaveplayback(int frequency, int bits, bx_bool stereo, i
         (bits == oldbits) &&
         (stereo == oldstereo) &&
         (format == oldformat))
-        return BX_SOUNDLOW_OK;    // nothing to do
+      return BX_SOUNDLOW_OK;    // nothing to do
 
     oldfreq = frequency;
     oldbits = bits;
@@ -260,22 +342,58 @@ int bx_sound_osx_c::startwaveplayback(int frequency, int bits, bx_bool stereo, i
     srcFormat.mChannelsPerFrame = channels;
     srcFormat.mBitsPerChannel = bytes * 8;
 
-    if (WavePlaying) AudioOutputUnitStop (WaveOutputUnit);
-    if (WaveConverter) AudioConverterDispose (WaveConverter);
+    if (WavePlaying) {
+      err = AudioOutputUnitStop (WaveOutputUnit);
+      if (err)
+        BX_ERROR(("Core Audio: startwaveplayback(): AudioOutputUnitStop (err=%X)\n", (unsigned int)err)); 
+    }
+    if (WaveConverter) {
+      err = AudioConverterDispose (WaveConverter);
+      if (err)
+        BX_ERROR(("Core Audio: startwaveplayback(): AudioConverterDispose (err=%X)\n", (unsigned int)err)); 
+    }
 
-    AudioUnitGetProperty (WaveOutputUnit, kAudioUnitProperty_StreamFormat,
+    err = AudioUnitGetProperty (WaveOutputUnit, kAudioUnitProperty_StreamFormat,
         kAudioUnitScope_Output, 0, &dstFormat, &formatSize);
+    if (err) {
+      BX_ERROR(("Core Audio: startwaveplayback(): AudioUnitGetProperty (err=%X)\n", (unsigned int)err)); 
+      return BX_SOUNDLOW_ERR;
+    }
 
-    AudioConverterNew (&srcFormat, &dstFormat, &WaveConverter);
+#ifdef BX_SOUND_OSX_CONVERTER_NEW_API
+    // force interleaved mode
+    dstFormat.mFormatFlags |= kAudioFormatFlagIsNonInterleaved;
+    dstFormat.mBytesPerPacket = dstFormat.mBytesPerFrame = (dstFormat.mBitsPerChannel + 7) / 8;
+    err = AudioUnitSetProperty (WaveOutputUnit, kAudioUnitProperty_StreamFormat,
+        kAudioUnitScope_Input, 0, &dstFormat, sizeof(dstFormat));
+    if (err) {
+      BX_ERROR(("Core Audio: startwaveplayback(): AudioUnitSetProperty (err=%X)\n", (unsigned int)err)); 
+      return BX_SOUNDLOW_ERR;
+    }
+#endif
+
+    err = AudioConverterNew (&srcFormat, &dstFormat, &WaveConverter);
+    if (err) {
+      BX_ERROR(("Core Audio: startwaveplayback(): AudioConverterNew (err=%X)\n", (unsigned int)err)); 
+      return BX_SOUNDLOW_ERR;
+    }
 
     if (srcFormat.mChannelsPerFrame == 1 && dstFormat.mChannelsPerFrame == 2) {
         // map single-channel input to both output channels
         SInt32 map[2] = {0,0};
-        AudioConverterSetProperty (WaveConverter, kAudioConverterChannelMap,
+        err = AudioConverterSetProperty (WaveConverter,
+                            kAudioConverterChannelMap, 
                             sizeof(map), (void*) map);
+        if (err) {
+          BX_ERROR(("Core Audio: startwaveplayback(): AudioConverterSetProperty (err=%X)\n", (unsigned int)err)); 
+          return BX_SOUNDLOW_ERR;
+        }
     }
 
-    if (WavePlaying) AudioOutputUnitStart (WaveOutputUnit);
+    if (WavePlaying) {
+      if (core_audio_resume() != noErr)
+        return BX_SOUNDLOW_ERR;
+    }
 #endif
 
     return BX_SOUNDLOW_OK;
@@ -292,9 +410,9 @@ int bx_sound_osx_c::waveready()
     else {
 #ifdef BX_SOUND_OSX_use_converter
         // If buffer is full, make sure sound is playing
-        if (WaveOutputUnit && !WavePlaying) {
-            AudioOutputUnitStart (WaveOutputUnit);
-            WavePlaying = 1;
+        if (!WavePlaying) {
+          if (core_audio_resume() != noErr)
+            return BX_SOUNDLOW_ERR;
         }
 #endif
         return BX_SOUNDLOW_ERR;
@@ -328,8 +446,8 @@ int bx_sound_osx_c::sendwavepacket(int length, Bit8u data[])
 #ifdef BX_SOUND_OSX_use_converter
     // make sure that the sound is playing
     if (!WavePlaying) {
-        AudioOutputUnitStart (WaveOutputUnit);
-        WavePlaying = 1;
+      if (core_audio_resume() != noErr)
+        return BX_SOUNDLOW_ERR;
     }
 #endif
 
@@ -370,12 +488,14 @@ int bx_sound_osx_c::closewaveoutput()
 }
 
 #ifdef BX_SOUND_OSX_use_converter
+#ifndef BX_SOUND_OSX_CONVERTER_NEW_API
 OSStatus MyRenderer (void *inRefCon, AudioUnitRenderActionFlags inActionFlags,
     const AudioTimeStamp *inTimeStamp, UInt32 inBusNumber, AudioBuffer *ioData)
 {
+    OSStatus err;
     UInt32 size = ioData->mDataByteSize;
-    AudioConverterFillBuffer (WaveConverter, MyACInputProc, inRefCon, &size, ioData->mData);
-    return noErr;
+    err = AudioConverterFillBuffer (WaveConverter, MyACInputProc, inRefCon, &size, ioData->mData);
+    return err;
 }
 
 OSStatus MyACInputProc (AudioConverterRef inAudioConverter,
@@ -385,6 +505,52 @@ OSStatus MyACInputProc (AudioConverterRef inAudioConverter,
     self->nextbuffer ((int*) outDataSize, outData);
     return noErr;
 }
+#else
+OSStatus MyRenderer (void *inRefCon, AudioUnitRenderActionFlags *ioActionFlags, const AudioTimeStamp *inTimeStamp, UInt32 inBusNumber, UInt32 inNumberFrames, AudioBufferList *ioData)
+{
+    UInt32 packets;
+    AudioStreamBasicDescription dstFormat;
+    UInt32 formatSize = sizeof(AudioStreamBasicDescription);
+    OSStatus err = noErr;
+
+    err = AudioConverterGetProperty (WaveConverter,
+      kAudioConverterCurrentOutputStreamDescription,
+      &formatSize, &dstFormat);
+    if (err) {
+      return err;
+    }    
+
+    packets = inNumberFrames / dstFormat.mFramesPerPacket; 
+    err = AudioConverterFillComplexBuffer(WaveConverter,
+      MyACInputProc, inRefCon, &packets, ioData, NULL);
+     
+    return err;
+}
+
+OSStatus MyACInputProc (AudioConverterRef inAudioConverter, UInt32 *ioNumberDataPackets, AudioBufferList *ioData, AudioStreamPacketDescription **outDataPacketDescription, void *inUserData)
+{
+    OSStatus err;
+    bx_sound_osx_c *self = (bx_sound_osx_c*) inUserData;
+    AudioStreamBasicDescription srcFormat;
+    UInt32 formatSize = sizeof(AudioStreamBasicDescription);
+
+    err = AudioConverterGetProperty (inAudioConverter,
+      kAudioConverterCurrentInputStreamDescription,
+      &formatSize, &srcFormat);
+    if (err) {
+      *ioNumberDataPackets = 0;
+      return err;
+    }    
+    int outDataSize = *ioNumberDataPackets * srcFormat.mBytesPerPacket;
+    void *outData = ioData->mBuffers[0].mData; 
+    self->nextbuffer ((int*) &outDataSize, &outData);
+    *ioNumberDataPackets = outDataSize / srcFormat.mBytesPerPacket;
+    ioData->mBuffers[0].mDataByteSize = outDataSize;
+    ioData->mBuffers[0].mData = outData; 
+
+    return noErr;
+}
+#endif
 
 void bx_sound_osx_c::nextbuffer (int *outDataSize, void **outData)
 {
@@ -394,8 +560,7 @@ void bx_sound_osx_c::nextbuffer (int *outDataSize, void **outData)
         *outDataSize = 0;
 
         // We are getting behind, so stop the output for now
-        AudioOutputUnitStop (WaveOutputUnit);
-        WavePlaying = 0;
+        core_audio_pause();
     }
     else {
         int n = tail % BX_SOUND_OSX_NBUF;
